--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
       k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
     })
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+      (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym");
 
     ym(90966830, "init", {
       clickmap: true,
@@ -35,12 +35,6 @@
   </noscript>
 
   <div id="root"></div>
-
-  <a href="https://metrika.yandex.ru/stat/?id=90966830&amp;from=informer" target="_blank" rel="nofollow"><img
-      src="https://informer.yandex.ru/informer/90966830/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
-      style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
-      title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer"
-      data-cid="90966830" data-lang="ru" /></a>
 </body>
 
 </html>
