--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <meta name="yandex-verification" content="a5492ffd57ba90a3" />
 
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
