added not found page

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="Работа для студентов"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <meta name="yandex-verification" content="a5492ffd57ba90a3" />
+    <meta name="yandex-verification" content="a5492ffd57ba90a3"/>
+    <meta name="google" content="notranslate">
 
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
@@ -33,7 +34,7 @@
             webvisor: true
         });
     </script>
-    <title class='notranslate'>STD WORK</title>
+    <title>STD WORK</title>
 </head>
 
 <body>
