--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta name="yandex-verification" content="a5492ffd57ba90a3"/>
     <meta name="google" content="notranslate">
 
+    <!--    Счетчик Yandex-->
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
             m[i] = m[i] || function () {
@@ -34,14 +35,41 @@
             webvisor: true
         });
     </script>
+
     <title>STD WORK</title>
 </head>
 
 <body>
+<!--    Счетчик Mail-->
+<script type="text/javascript">
+    var _tmr = window._tmr || (window._tmr = []);
+    _tmr.push({id: "3271888", type: "pageView", start: (new Date()).getTime()});
+    (function (d, w, id) {
+        if (d.getElementById(id)) return;
+        var ts = d.createElement("script");
+        ts.type = "text/javascript";
+        ts.async = true;
+        ts.id = id;
+        ts.src = "https://top-fwz1.mail.ru/js/code.js";
+        var f = function () {
+            var s = d.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(ts, s);
+        };
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else {
+            f();
+        }
+    })(document, window, "tmr-code");
+</script>
 <noscript>
     <div>
         <img src="https://mc.yandex.ru/watch/90966830" style="position:absolute; left:-9999px;" alt=""/>
     </div>
+</noscript>
+<noscript>
+    <div><img src="https://top-fwz1.mail.ru/counter?id=3271888;js=na" style="position:absolute;left:-9999px;"
+              alt="Top.Mail.Ru"/></div>
 </noscript>
 
 <div id="root"></div>
