--- a/public/index.html
+++ b/public/index.html
@@ -2,77 +2,90 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <meta name="description" content="Работа для студентов"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <meta name="yandex-verification" content="a5492ffd57ba90a3"/>
-    <meta name="google" content="notranslate">
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Работа для студентов" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="yandex-verification" content="a5492ffd57ba90a3" />
+  <meta name="google" content="notranslate">
 
-    <!--    Счетчик Yandex-->
-    <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () {
-                (m[i].a = m[i].a || []).push(arguments)
-            };
-            m[i].l = 1 * new Date();
-            for (var j = 0; j < document.scripts.length; j++) {
-                if (document.scripts[j].src === r) {
-                    return;
-                }
-            }
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-        (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym");
+  <!--    Счетчик Yandex-->
+  <script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+      m[i] = m[i] || function () {
+        (m[i].a = m[i].a || []).push(arguments)
+      };
+      m[i].l = 1 * new Date();
+      for (var j = 0; j < document.scripts.length; j++) {
+        if (document.scripts[j].src === r) {
+          return;
+        }
+      }
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+      (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym");
 
-        ym(90966830, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
+    ym(90966830, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true
+    });
+  </script>
 
-    <title>STD WORK</title>
+  <!-- Счетчик гугл -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-256873916-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-256873916-1');
+  </script>
+
+
+  <title>STD WORK</title>
 </head>
 
 <body>
-<!--    Счетчик Mail-->
-<script type="text/javascript">
+  <!--    Счетчик Mail-->
+  <script type="text/javascript">
     var _tmr = window._tmr || (window._tmr = []);
-    _tmr.push({id: "3271888", type: "pageView", start: (new Date()).getTime()});
+    _tmr.push({ id: "3271888", type: "pageView", start: (new Date()).getTime() });
     (function (d, w, id) {
-        if (d.getElementById(id)) return;
-        var ts = d.createElement("script");
-        ts.type = "text/javascript";
-        ts.async = true;
-        ts.id = id;
-        ts.src = "https://top-fwz1.mail.ru/js/code.js";
-        var f = function () {
-            var s = d.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(ts, s);
-        };
-        if (w.opera == "[object Opera]") {
-            d.addEventListener("DOMContentLoaded", f, false);
-        } else {
-            f();
-        }
+      if (d.getElementById(id)) return;
+      var ts = d.createElement("script");
+      ts.type = "text/javascript";
+      ts.async = true;
+      ts.id = id;
+      ts.src = "https://top-fwz1.mail.ru/js/code.js";
+      var f = function () {
+        var s = d.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(ts, s);
+      };
+      if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+      } else {
+        f();
+      }
     })(document, window, "tmr-code");
-</script>
-<noscript>
+  </script>
+  <noscript>
     <div><img src="https://top-fwz1.mail.ru/counter?id=3271888;js=na" style="position:absolute;left:-9999px;"
-              alt="Top.Mail.Ru"/></div>
-</noscript>
-<noscript>
+        alt="Top.Mail.Ru" /></div>
+  </noscript>
+  <noscript>
     <div>
-        <img src="https://mc.yandex.ru/watch/90966830" style="position:absolute; left:-9999px;" alt=""/>
+      <img src="https://mc.yandex.ru/watch/90966830" style="position:absolute; left:-9999px;" alt="" />
     </div>
-</noscript>
+  </noscript>
 
-<div id="root"></div>
+
+
+  <div id="root"></div>
 </body>
 
 </html>
